# Sakuragi-Shizuku-Agent

./: ARCHITECTURE.md  README.md  __init__.py  main.py  pyproject.toml
agents/: architect.py  code_generator.py  debug_agent.py  requirement.py  test_agent.py
core/: __init__.py  base_agent.py  context_optimizer.py  memory_manager.py  models.py  orchestrator.py
prompts/: templates.py
runner/: __init__.py  cli.py  debug_loop.py
tests/: test_memory.py  test_models.py  test_orchestrator.py
